--- a/index.html
+++ b/index.html
@@ -5,13 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
+
+    <!-- header -->
     <header>
 
-        <nav>
-            <a href="./index.html">WebStudio</a>
+        <nav class="logo">
+            <a href="./index.html">Web<span>Studio</span></a>
             <ul>
                 <li><a href="">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
@@ -26,13 +34,16 @@
         </address>
     </header>
 
+    <!-- main -->
     <main>
-        <section>
+        <!-- section 1 -->
+        <section class="main-section">
             <h1>Effective Solutions for Your Business</h1>
             <button type="button">Order Service</button>
         </section>
 
-        <section>
+        <!-- section 2 -->
+        <section class="article">
             <h2>#</h2>
             <ul>
                 <li>
@@ -65,7 +76,9 @@
                 </li>
             </ul>
         </section>
-        <section>
+
+        <!-- section 3 -->
+        <section class="team">
             <h2>Our Team</h2>
             <ul>
                 <li>
@@ -90,10 +103,48 @@
                 </li>
             </ul>
         </section>
+
+        <!-- section4 -->
+        <section class="portfolio">
+            <h2>Our Portfolio</h2>
+            <ul>
+                <li>
+                    <img src="./images/banking-app.jpg" alt="Banking App" width="264">
+                    <h3>Banking App</h3>
+                    <p>App</p>
+                </li>
+                <li>
+                    <img src="./images/cashless-paynment.jpg" alt="Cashless Payment" width="264">
+                    <h3>Cashless Payment</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/mediation-app.jpg" alt="Meditaion App" width="264">
+                    <h3>Meditaion App</h3>
+                    <p>App</p>
+                </li>
+                <li>
+                    <img src="./images/taxi-service.jpg" alt="Taxi Service" width="264">
+                    <h3>Taxi Service</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/screen-illustrations.jpg" alt="Screen Illustrations" width="264">
+                    <h3>Screen Illustrations</h3>
+                    <p>Design</p>
+                </li>
+                <li>
+                    <img src="./images/online-courses.jpg" alt="Online Courses" width="264">
+                    <h3>Online Courses</h3>
+                    <p>Marketing</p>
+                </li>
+            </ul>
+        </section>
     </main>
 
+    <!-- footer -->
     <footer>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html" class="bottom-logo">Web<span>Studio</span></a>
         <p> Increase the flow of customers and
             sales for your business with digital
             marketing & growth solutions.
