--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 </li>
                 <li>
                     <img src="./images/mediation-app.jpg" alt="Meditaion App" width="360">
-                    <h3 class="portfolio-list-header">Meditaion App</h3>
+                    <h3 class="portfolio-list-header">Meditation App</h3>
                     <p class="portfolio-text">App</p>
                 </li>
                 <li>
@@ -144,8 +144,7 @@
 
     <!-- footer -->
     <footer class="footer">
-        <a class="footer-logo" href="./index.html" class="bottom-logo">Web<span
-                class="half-footer-logo">Studio</span></a>
+        <a class="footer-logo" href="./index.html">Web<span class="half-footer-logo">Studio</span></a>
         <p class="footer-text"> Increase the flow of customers and
             sales for your business with digital
             marketing & growth solutions.
